javaDSL/src/test/resources/typeSystemTestModels/invalid/names/InterfaceValidSuperTypes.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.names;

import java.util.List;

public interface InterfaceValidSuperTypes extends List<String, Integer> {

}
